# devops_automation_project

./: .env.example  .gitignore  README.md  WARP.md  adk_sessions.db  architecture.md  bkp_main.py  config.yaml  log.py  main.py  pyproject.toml  requirements.txt  run_agent.py  test_streaming.py
HLD/: HLD.md  HLD_bullet_points.md  HLD_with_diagrams.md  multi_agent_system_diagram.md
devops_agent_system/: __init__.py  agent.py
devops_agent_system/agents/: __init__.py  base_agent.py
devops_agent_system/db/: database.py
devops_agent_system/tools/: session_tools.py
frontend/: .gitignore
frontend/gemini-modern-terminal/: AgentTraceApp.tsx  index.html  metadata.json  openshift_documentation.md  package-lock.json  vite.config.ts
frontend/src/: index.css
k8s/: context.json  kubernetes_advanced_concepts.md  kubernetes_advanced_concepts_chat.md
mcp_servers/elasticsearch_mcp/: .env.example  README.md  requirements.txt  server.py
mcp_servers/kubectl-ai_mcp/: README.md  kubernetes_manager.py  requirements.txt  server.py  test_server.py
mcp_servers/simple_mcp/: README.md  requirements.txt  (+1 more)
scripts/: README.md  ensure_elasticsearch_image.bat  ensure_elasticsearch_image.sh  prerequisites.bat  prerequisites.py  prerequisites.sh  senior_ai_ml_developer_prompt.md  senior_devops_developer_prompt.md  start_elasticsearch_mcp.bat  start_elasticsearch_mcp.sh  start_elasticsearch_mcp_server.sh  start_mcp_servers.bat  test_client.py
static/: index.html
testing/: test_agent.py  test_elasticsearch_agent.py  test_imports.py
tests/: test_agents.py  test_kubectl_ai_mcp.py
(+17 files in other folders)
